--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
             <artifactId>jsqlparser</artifactId>
             <version>0.9.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-mqtt</artifactId>
+            <version>5.3.2.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
