--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,15 +7,23 @@ spring:
       max-file-size: 1GB
       max-request-size: 1GB
   mqtt:
-    #MQTT??????????1883????????????
     url: tcp://127.0.0.1:1883
-    #???
     username: admin
-    #??
     password: liu0929pan0.
-    #???id(????)
     client:
       id: consumer-1
-    #MQTT?????????????????????
     default:
       topic: topic
+  datasource:
+    url: jdbc:mysql://localhost:3306/richtech?allowMultiQueries=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&nullCatalogMeansCurrent=true&allowPublicKeyRetrieval=true
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    type: com.zaxxer.hikari.HikariDataSource
+    hikari:
+      minimum-idle: 10
+      maximum-pool-size: 200
+      idle-timeout: 10000
+      connection-test-query: select 1
+      connection-timeout: 30000
+      pool-name: hikariCP
