--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>pdfbox</artifactId>
             <version>2.0.17</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
